week3/ex5/ex5Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  command : expr SEMI
   3          | LET var var_expr SEMI
   4          | LET REC var var var_expr SEMI

   5  expr : LET var var_expr IN expr
   6       | LET REC var var var_expr IN expr
   7       | LET REC var var var_expr and_expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | expr EQ expr
  10       | expr LT expr
  11       | expr PLUS expr
  12       | expr MINUS expr
  13       | expr TIMES expr
  14       | expr DIV expr
  15       | FUN var ARROW expr
  16       | FUN var var ARROW expr
  17       | expr apply_expr
  18       | MATCH expr WITH pattern_expr END
  19       | expr CONS expr
  20       | cons_expr
  21       | apply_expr

  22  var_expr : EQ expr
  23           | var var_expr

  24  and_expr : AND var var EQ expr and_expr
  25           |

  26  cons_expr : noncons_expr
  27            | expr CONS cons_expr

  28  noncons_expr : apply_expr
  29               | LPAR expr COMMA expr_list RPAR

  30  expr_list : expr
  31            | expr COMMA expr_list

  32  pattern_expr : pattern ARROW expr
  33               | pattern ARROW expr OR pattern_expr

  34  pattern : INT
  35          | BOOL
  36          | ID
  37          | LBRACKET RBRACKET
  38          | LPAR pattern COMMA pattern_list RPAR
  39          | pattern CONS pattern

  40  pattern_list : pattern
  41               | pattern COMMA pattern_list

  42  apply_expr : INT
  43             | BOOL
  44             | ID
  45             | LPAR expr RPAR
  46             | LBRACKET RBRACKET

  47  var : ID

  48  %entry% : '\001' main
  49          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (48)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	main  goto 13
	expr  goto 14
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 2
	%entry% : '\002' . command  (49)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 18
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	command  goto 19
	expr  goto 20
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (42)

	.  reduce 42


state 5
	apply_expr : BOOL .  (43)

	.  reduce 43


state 6
	apply_expr : ID .  (44)

	.  reduce 44


state 7
	expr : LET . var var_expr IN expr  (5)
	expr : LET . REC var var var_expr IN expr  (6)
	expr : LET . REC var var var_expr and_expr IN expr  (7)

	ID  shift 21
	REC  shift 22
	.  error

	var  goto 23


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 24
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 9
	noncons_expr : LPAR . expr COMMA expr_list RPAR  (29)
	apply_expr : LPAR . expr RPAR  (45)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 25
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 10
	expr : FUN . var ARROW expr  (15)
	expr : FUN . var var ARROW expr  (16)

	ID  shift 21
	.  error

	var  goto 26


state 11
	expr : MATCH . expr WITH pattern_expr END  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 27
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 12
	apply_expr : LBRACKET . RBRACKET  (46)

	RBRACKET  shift 28
	.  error


state 13
	%entry% : '\001' main .  (48)

	.  reduce 48


state 14
	main : expr . EOF  (1)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	EOF  shift 36
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


15: reduce/reduce conflict (reduce 21, reduce 28) on INT
15: reduce/reduce conflict (reduce 21, reduce 28) on BOOL
15: reduce/reduce conflict (reduce 21, reduce 28) on ID
15: reduce/reduce conflict (reduce 21, reduce 28) on IN
15: reduce/reduce conflict (reduce 21, reduce 28) on PLUS
15: reduce/reduce conflict (reduce 21, reduce 28) on MINUS
15: reduce/reduce conflict (reduce 21, reduce 28) on TIMES
15: reduce/reduce conflict (reduce 21, reduce 28) on DIV
15: reduce/reduce conflict (reduce 21, reduce 28) on EQ
15: reduce/reduce conflict (reduce 21, reduce 28) on LT
15: reduce/reduce conflict (reduce 21, reduce 28) on THEN
15: reduce/reduce conflict (reduce 21, reduce 28) on ELSE
15: reduce/reduce conflict (reduce 21, reduce 28) on LPAR
15: reduce/reduce conflict (reduce 21, reduce 28) on RPAR
15: reduce/reduce conflict (reduce 21, reduce 28) on WITH
15: reduce/reduce conflict (reduce 21, reduce 28) on OR
15: reduce/reduce conflict (reduce 21, reduce 28) on END
15: reduce/reduce conflict (reduce 21, reduce 28) on SEMI
15: reduce/reduce conflict (reduce 21, reduce 28) on EOF
15: reduce/reduce conflict (reduce 21, reduce 28) on COMMA
15: reduce/reduce conflict (reduce 21, reduce 28) on CONS
15: reduce/reduce conflict (reduce 21, reduce 28) on LBRACKET
15: reduce/reduce conflict (reduce 21, reduce 28) on AND
state 15
	expr : apply_expr .  (21)
	noncons_expr : apply_expr .  (28)

	.  reduce 21


state 16
	expr : cons_expr .  (20)

	.  reduce 20


state 17
	cons_expr : noncons_expr .  (26)

	.  reduce 26


state 18
	command : LET . var var_expr SEMI  (3)
	command : LET . REC var var var_expr SEMI  (4)
	expr : LET . var var_expr IN expr  (5)
	expr : LET . REC var var var_expr IN expr  (6)
	expr : LET . REC var var var_expr and_expr IN expr  (7)

	ID  shift 21
	REC  shift 39
	.  error

	var  goto 40


state 19
	%entry% : '\002' command .  (49)

	.  reduce 49


state 20
	command : expr . SEMI  (2)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	SEMI  shift 41
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 21
	var : ID .  (47)

	.  reduce 47


state 22
	expr : LET REC . var var var_expr IN expr  (6)
	expr : LET REC . var var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 42


state 23
	expr : LET var . var_expr IN expr  (5)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 45


state 24
	expr : IF expr . THEN expr ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	THEN  shift 46
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 25
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)
	noncons_expr : LPAR expr . COMMA expr_list RPAR  (29)
	apply_expr : LPAR expr . RPAR  (45)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 47
	COMMA  shift 48
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 26
	expr : FUN var . ARROW expr  (15)
	expr : FUN var . var ARROW expr  (16)

	ID  shift 21
	ARROW  shift 49
	.  error

	var  goto 50


state 27
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : MATCH expr . WITH pattern_expr END  (18)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	WITH  shift 51
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 28
	apply_expr : LBRACKET RBRACKET .  (46)

	.  reduce 46


state 29
	expr : expr PLUS . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 52
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 30
	expr : expr MINUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 53
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 31
	expr : expr TIMES . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 54
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 32
	expr : expr DIV . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 55
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 33
	expr : expr EQ . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 56
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 34
	expr : expr LT . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 57
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 35
	apply_expr : LPAR . expr RPAR  (45)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 58
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 36
	main : expr EOF .  (1)

	.  reduce 1


state 37
	expr : expr CONS . expr  (19)
	cons_expr : expr CONS . cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 59
	apply_expr  goto 15
	cons_expr  goto 60
	noncons_expr  goto 17


state 38
	expr : expr apply_expr .  (17)

	.  reduce 17


state 39
	command : LET REC . var var var_expr SEMI  (4)
	expr : LET REC . var var var_expr IN expr  (6)
	expr : LET REC . var var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 61


state 40
	command : LET var . var_expr SEMI  (3)
	expr : LET var . var_expr IN expr  (5)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 62


state 41
	command : expr SEMI .  (2)

	.  reduce 2


state 42
	expr : LET REC var . var var_expr IN expr  (6)
	expr : LET REC var . var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 63


state 43
	var_expr : EQ . expr  (22)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 64
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 44
	var_expr : var . var_expr  (23)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 65


state 45
	expr : LET var var_expr . IN expr  (5)

	IN  shift 66
	.  error


state 46
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 67
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 47
	apply_expr : LPAR expr RPAR .  (45)

	.  reduce 45


state 48
	noncons_expr : LPAR expr COMMA . expr_list RPAR  (29)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 68
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17
	expr_list  goto 69


state 49
	expr : FUN var ARROW . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 70
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 50
	expr : FUN var var . ARROW expr  (16)

	ARROW  shift 71
	.  error


state 51
	expr : MATCH expr WITH . pattern_expr END  (18)

	INT  shift 72
	BOOL  shift 73
	ID  shift 74
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	pattern_expr  goto 77
	pattern  goto 78


state 52
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr PLUS expr .  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11
	COMMA  reduce 11
	CONS  reduce 11
	AND  reduce 11

	apply_expr  goto 38


state 53
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr MINUS expr .  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12
	COMMA  reduce 12
	CONS  reduce 12
	AND  reduce 12

	apply_expr  goto 38


state 54
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr TIMES expr .  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	TIMES  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13
	COMMA  reduce 13
	CONS  reduce 13
	AND  reduce 13

	apply_expr  goto 38


state 55
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr DIV expr .  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14
	COMMA  reduce 14
	CONS  reduce 14
	AND  reduce 14

	apply_expr  goto 38


state 56
	expr : expr . EQ expr  (9)
	expr : expr EQ expr .  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	WITH  reduce 9
	OR  reduce 9
	END  reduce 9
	SEMI  reduce 9
	EOF  reduce 9
	COMMA  reduce 9
	AND  reduce 9

	apply_expr  goto 38


state 57
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr LT expr .  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10
	COMMA  reduce 10
	AND  reduce 10

	apply_expr  goto 38


state 58
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)
	apply_expr : LPAR expr . RPAR  (45)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 47
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 59
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	expr : expr CONS expr .  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	WITH  reduce 19
	OR  reduce 19
	END  reduce 19
	SEMI  reduce 19
	EOF  reduce 19
	COMMA  reduce 19
	AND  reduce 19

	apply_expr  goto 38


60: reduce/reduce conflict (reduce 20, reduce 27) on INT
60: reduce/reduce conflict (reduce 20, reduce 27) on BOOL
60: reduce/reduce conflict (reduce 20, reduce 27) on ID
60: reduce/reduce conflict (reduce 20, reduce 27) on IN
60: reduce/reduce conflict (reduce 20, reduce 27) on PLUS
60: reduce/reduce conflict (reduce 20, reduce 27) on MINUS
60: reduce/reduce conflict (reduce 20, reduce 27) on TIMES
60: reduce/reduce conflict (reduce 20, reduce 27) on DIV
60: reduce/reduce conflict (reduce 20, reduce 27) on EQ
60: reduce/reduce conflict (reduce 20, reduce 27) on LT
60: reduce/reduce conflict (reduce 20, reduce 27) on THEN
60: reduce/reduce conflict (reduce 20, reduce 27) on ELSE
60: reduce/reduce conflict (reduce 20, reduce 27) on LPAR
60: reduce/reduce conflict (reduce 20, reduce 27) on RPAR
60: reduce/reduce conflict (reduce 20, reduce 27) on WITH
60: reduce/reduce conflict (reduce 20, reduce 27) on OR
60: reduce/reduce conflict (reduce 20, reduce 27) on END
60: reduce/reduce conflict (reduce 20, reduce 27) on SEMI
60: reduce/reduce conflict (reduce 20, reduce 27) on EOF
60: reduce/reduce conflict (reduce 20, reduce 27) on COMMA
60: reduce/reduce conflict (reduce 20, reduce 27) on CONS
60: reduce/reduce conflict (reduce 20, reduce 27) on LBRACKET
60: reduce/reduce conflict (reduce 20, reduce 27) on AND
state 60
	expr : cons_expr .  (20)
	cons_expr : expr CONS cons_expr .  (27)

	.  reduce 20


state 61
	command : LET REC var . var var_expr SEMI  (4)
	expr : LET REC var . var var_expr IN expr  (6)
	expr : LET REC var . var var_expr and_expr IN expr  (7)

	ID  shift 21
	.  error

	var  goto 79


state 62
	command : LET var var_expr . SEMI  (3)
	expr : LET var var_expr . IN expr  (5)

	IN  shift 66
	SEMI  shift 80
	.  error


state 63
	expr : LET REC var var . var_expr IN expr  (6)
	expr : LET REC var var . var_expr and_expr IN expr  (7)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 81


state 64
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	var_expr : EQ expr .  (22)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 22
	SEMI  reduce 22
	AND  reduce 22

	apply_expr  goto 38


state 65
	var_expr : var var_expr .  (23)

	.  reduce 23


state 66
	expr : LET var var_expr IN . expr  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 82
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 67
	expr : IF expr THEN expr . ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	ELSE  shift 83
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 68
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)
	expr_list : expr .  (30)
	expr_list : expr . COMMA expr_list  (31)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	COMMA  shift 84
	CONS  shift 37
	LBRACKET  shift 12
	RPAR  reduce 30

	apply_expr  goto 38


state 69
	noncons_expr : LPAR expr COMMA expr_list . RPAR  (29)

	RPAR  shift 85
	.  error


state 70
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : FUN var ARROW expr .  (15)
	expr : expr . apply_expr  (17)
	expr : expr . CONS expr  (19)
	cons_expr : expr . CONS cons_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	WITH  reduce 15
	OR  reduce 15
	END  reduce 15
	SEMI  reduce 15
	EOF  reduce 15
	COMMA  reduce 15
	AND  reduce 15

	apply_expr  goto 38


state 71
	expr : FUN var var ARROW . expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 86
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 72
	pattern : INT .  (34)

	.  reduce 34


state 73
	pattern : BOOL .  (35)

	.  reduce 35


state 74
	pattern : ID .  (36)

	.  reduce 36


state 75
	pattern : LPAR . pattern COMMA pattern_list RPAR  (38)

	INT  shift 72
	BOOL  shift 73
	ID  shift 74
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	pattern  goto 87


state 76
	pattern : LBRACKET . RBRACKET  (37)

	RBRACKET  shift 88
	.  error


state 77
	expr : MATCH expr WITH pattern_expr . END  (18)

	END  shift 89
	.  error


state 78
	pattern_expr : pattern . ARROW expr  (32)
	pattern_expr : pattern . ARROW expr OR pattern_expr  (33)
	pattern : pattern . CONS pattern  (39)

	ARROW  shift 90
	CONS  shift 91
	.  error


state 79
	command : LET REC var var . var_expr SEMI  (4)
	expr : LET REC var var . var_expr IN expr  (6)
	expr : LET REC var var . var_expr and_expr IN expr  (7)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 92


state 80
	command : LET var var_expr SEMI .  (3)

	.  reduce 3

